--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <h2>PPC e Matriz Curricular</h2>
     <ul>
-      <li><a href="/PPC de Licenciatura em Computação EaD, Câmpus de Palmas - Consepe-UFT.pdf">PPC do Curso</a></li>
-      <li><a href="/imagens/Matriz-curricular.png">Matriz Curricular</a></li>
+      <li><a href="./PPC de Licenciatura em Computação EaD, Câmpus de Palmas - Consepe-UFT.pdf">PPC do Curso</a></li>
+      <li><a href="imagens/Matriz-curricular.png">Matriz Curricular</a></li>
     </ul>
   </main>
 </body>
